@@ -17,6 +17,10 @@ clusterMap(cl, function(x,y) seq_len(x) + y,
 
 parSapply(cl, 1:20, get("+"), 3)
 
+## PR14898
+parSapply(cl, 1, identity)
+
+
 ## A bootstrapping example, which can be done in many ways:
 clusterEvalQ(cl, {
   ## set up each worker.  Could also use clusterExport()
